--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
   </head>
 
   <body>
+    <h1 id="title">Survey Form</h1>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <p>Hello world</p>
-    <p>Hello World, we are software developers!</p>
+
+    <p id="description">
+      This is a Survey Form, please complete all the required questions.
+    </p>
     <!--
 
     Hello Camper!
