add form element

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <p id="description">
       This is a Survey Form, please complete all the required questions.
     </p>
+
+    <form id="survey-form">
+      <input required id="name" type="text">
+    </form>
     <!--
 
     Hello Camper!
