--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     </p>
 
     <form id="survey-form">
-      <input required id="name" type="text">
+      <input required id="name" type="text" />
+      <input required id="email" type="email" pattern="example@gmail.com" />
     </form>
     <!--
 
