add new element

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <form id="survey-form">
       <input required id="name" type="text" />
       <input required id="email" type="email" pattern="example@gmail.com" />
+      <input id="number" type="number">
     </form>
     <!--
 
