--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     </p>
 
     <form id="survey-form">
+      <label id="name-label">Name</label>
       <input required id="name" type="text" />
+      <label id="email-label">Email</label>
       <input required id="email" type="email" pattern="example@gmail.com" />
-      <input id="number" type="number">
+      <label id="number-label">Phone number</label>
+      <input id="number" type="number" min="9" max="11" />
     </form>
     <!--
 
