--- a/index.html
+++ b/index.html
@@ -16,11 +16,16 @@
 
     <form id="survey-form">
       <label id="name-label">Name</label>
-      <input required id="name" type="text" />
+      <input required id="name" type="text" placeholder="add the name" />
       <label id="email-label">Email</label>
-      <input required id="email" type="email" pattern="example@gmail.com" />
+      <input required id="email" type="email" pattern="example@gmail.com" placeholder="add the email"/>
       <label id="number-label">Phone number</label>
-      <input id="number" type="number" min="9" max="11" />
+      <input id="number" type="number" min="9" max="11" placeholder="add the number"/>
+
+      <select name="" id="dropdown">}
+        <option value="elem1">Element 1</option>
+        <option value="elem2">Element 2</option>
+      </select>
     </form>
     <!--
 
