--- a/index.html
+++ b/index.html
@@ -18,14 +18,35 @@
       <label id="name-label">Name</label>
       <input required id="name" type="text" placeholder="add the name" />
       <label id="email-label">Email</label>
-      <input required id="email" type="email" pattern="example@gmail.com" placeholder="add the email"/>
+      <input
+        required
+        id="email"
+        type="email"
+        pattern="example@gmail.com"
+        placeholder="add the email"
+      />
       <label id="number-label">Phone number</label>
-      <input id="number" type="number" min="9" max="11" placeholder="add the number"/>
+      <input
+        id="number"
+        type="number"
+        min="9"
+        max="11"
+        placeholder="add the number"
+      />
 
-      <select name="" id="dropdown">}
+      <select name="" id="dropdown">
         <option value="elem1">Element 1</option>
-        <option value="elem2">Element 2</option>
+        <option t value="elem2">Element 2</option>
       </select>
+      <div id="buttons">
+        <input type="radio" name="attribute" value="radio" />
+        <input type="radio" name="attribute" value="radio2" />
+        <input type="checkbox" name="attribute" value="check" />
+        <input type="checkbox" name="attribute" value="check2" />
+
+      </div>
+  
+    </form>
     </form>
     <!--
 
