--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <input type="checkbox" name="attribute" value="check" />
         <input type="checkbox" name="attribute" value="check2" />
 
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+
+        <button id="submit">enviar</button>
       </div>
   
     </form>
